# guo-hall-thinning

./: CMakeLists.txt  README.md  main.cpp  thinning.h
